update swagger and fetch
